<resources>
    <string name="app_name">KotlinQuizApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chosePic">Choose Picture</string>
    <string name="SignedOut">Signed out</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="new_username">New username</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_account">Delete Account</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="level_up">Level up</string>
    <string name="next">Next</string>
    <string name="profile">Profile</string>
    <string name="total_score">Total Score</string>
    <string name="sign_out">Sign out</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="share">Share</string>
    <string name="create_an_account">Create an account</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign up</string>
    <string name="level">Level</string>
    <string name="start">Start</string>
    <string name="sorry_try_again">Sorry.. try again</string>
    <string name="your_score">Your Score</string>
    <string name="try_again">Try again</string>
    <string name="main_menu">Main Menu</string>
    <string name="Choose_language">Choose Language</string>
    <string name="ok">ok</string>
    <string name="forget_password">Forget Password</string>
    <string name="please_enter_your_email_address_we_will_send_you_an_email_to_reset_your_password">Please enter your Email address. we will send you an email to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="level_">Level:</string>
    <string name="username_">Username:</string>
    <string name="foreget_password_">Foreget Password?</string>
    <string name="please_enter_your_email">Please enter your email address</string>
    <string name="email_sent">Email sent successfully</string>
    <string name="new_account">You\'ve created new account Successfully</string>
    <string name="mismatch">Password mismatch</string>
    <string name="deleteAccount">Delete Account</string>
    <string name="areYouSure">Are you sure you want to delete your account?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="Contact_us">Contact Us</string>
    <string name="enter_your_new_username">Please enter your new username</string>
</resources>