<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.TryAgainFragment">


    <ImageView
        android:id="@+id/ivTryAgain"
        android:layout_width="213dp"
        android:layout_height="259dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_tryagain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/sorry_try_again"
        android:textColor="@color/myColor1"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTryAgain" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/your_score"
        android:textColor="@color/myColor1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/tvYourScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="30sp"
        android:textColor="@color/myColor1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnTryAgain"
        android:layout_width="317dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:background="@drawable/custom_button2"
        android:textColor="@color/myColor1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvYourScore" />

    <Button
        android:id="@+id/btnMainMenu"
        android:layout_width="317dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:text="@string/main_menu"
        android:textAllCaps="false"
        android:background="@drawable/custom_button2"
        android:textColor="@color/myColor1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTryAgain" />

</androidx.constraintlayout.widget.ConstraintLayout>