<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsFragment">

    <View
        android:id="@+id/view3"
        android:layout_width="367dp"
        android:layout_height="420dp"
        android:layout_marginBottom="550dp"
        android:background="@drawable/custom_button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_marginBottom="500dp"
        android:textColor="@color/myColor1"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/btnLanguage"
        android:layout_width="317dp"
        android:layout_height="49dp"
        android:layout_marginTop="244dp"
        android:background="@drawable/custom_button1"
        android:text="@string/language"
        android:textAllCaps="false"
        android:textColor="@color/myColor2"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="317dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:text="@string/share"
        android:background="@drawable/custom_button2"
        android:textColor="@color/myColor1"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLanguage" />


</androidx.constraintlayout.widget.ConstraintLayout>