<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SignUpFragment">

    <View
        android:id="@+id/view3"
        android:layout_width="367dp"
        android:layout_height="420dp"
        android:layout_marginBottom="350dp"
        android:background="@drawable/custom_button2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="sans-serif-black"
        android:text="KQ"
        android:textColor="@color/myColor1"
        android:textSize="150sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="K o t l i n  Q u i z"
        android:textColor="@color/myColor1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etEmailSignUp"
        android:layout_width="292dp"
        android:layout_height="44dp"
        android:layout_marginTop="52dp"
        android:hint="@string/email"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/etUsernameSignUp"
        android:layout_width="292dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:hint="@string/username"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmailSignUp" />

    <EditText
        android:id="@+id/etPasswordSignUp"
        android:layout_width="292dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsernameSignUp" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="292dp"
        android:layout_height="44dp"
        android:layout_marginTop="12dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPasswordSignUp" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="317dp"
        android:layout_height="49dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:background="@drawable/custom_button2"
        android:textColor="@color/myColor1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

    <ImageView
        android:id="@+id/ivBackToSignIn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="590dp"
        android:layout_marginRight="300dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>